--- a/19_JQuery_AJAX.html
+++ b/19_JQuery_AJAX.html
@@ -10,7 +10,7 @@
 
 
 
-
+//Estoy haciendo una prueba de commit
 function enviarPeticionSincrona(){
     let parametros = `?nombre=${$("#nombre").val}`;
     $.ajax({ 'url' : "http://localhost:8080/Ej01_EjemploAjax/buscar"+parametros,
