--- a/19_JQuery_AJAX.html
+++ b/19_JQuery_AJAX.html
@@ -39,7 +39,7 @@ function mostrarError(){
     console.log("=================================");
     console.log(arguments);
     
-    alert("ZASCA!");
+    alert("ZASCA estoy probando una ramita!");
 }
 
 $(inicializar);
